Navbar fixes on mobile

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -149,7 +149,6 @@
 
   .navList {
     padding: 0px;
-    padding-left: 40px;
     margin: 0px;
     list-style: none;
     width: 100%;
@@ -191,7 +190,6 @@
   }
 
   .navList {
-    padding-left: 45px;
     padding-right: 0;
     margin: 0px;
     list-style: none;
